// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render the default button with a text 1`] = `
.emotion-0 {
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  padding: 0.5rem 0.75rem;
  font-size: 0.79rem;
  border-radius: 0.25rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif;
  border: 1px solid #EAEAEA;
  background-color: #EAEAEA;
  color: #111;
}

.emotion-0:hover {
  border: 1px solid #C9C5C5;
  background-color: #C9C5C5;
}

<button
  class="emotion-0"
>
  Default Button
</button>
`;

exports[`<Button /> should render with disabled attribute & cannot be click 1`] = `
.emotion-0 {
  font-weight: 500;
  cursor: pointer;
  opacity: 0.7;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  padding: 0.75rem 1.25rem;
  font-size: 0.889rem;
  border-radius: 0.25rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif;
  border: 1px solid #EAEAEA;
  background-color: #EAEAEA;
  color: #111;
}

<button
  class="emotion-0"
  disabled=""
>
  With disabled
</button>
`;

exports[`<Button /> should render with enable elevation 1`] = `
.emotion-0 {
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  padding: 0.75rem 1.25rem;
  font-size: 0.889rem;
  border-radius: 0.25rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif;
  box-shadow: 0px 5px 10px rgba(0,0,0,0.12);
  border: 1px solid #EAEAEA;
  background-color: #EAEAEA;
  color: #111;
}

.emotion-0:hover {
  box-shadow: 0px 8px 30px rgba(0,0,0,0.24);
  border: 1px solid #C9C5C5;
  background-color: #C9C5C5;
}

<button
  class="emotion-0"
>
  With disabled
</button>
`;

exports[`<Button /> should render with size medium 1`] = `
.emotion-0 {
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  padding: 0.75rem 1.25rem;
  font-size: 0.889rem;
  border-radius: 0.25rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif;
  border: 1px solid #EAEAEA;
  background-color: #EAEAEA;
  color: #111;
}

.emotion-0:hover {
  border: 1px solid #C9C5C5;
  background-color: #C9C5C5;
}

<button
  class="emotion-0"
>
  With Size Props Medium
</button>
`;

exports[`<Button /> should render with size small 1`] = `
.emotion-0 {
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  padding: 0.5rem 0.75rem;
  font-size: 0.79rem;
  border-radius: 0.25rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif;
  border: 1px solid #EAEAEA;
  background-color: #EAEAEA;
  color: #111;
}

.emotion-0:hover {
  border: 1px solid #C9C5C5;
  background-color: #C9C5C5;
}

<button
  class="emotion-0"
>
  With Size Props Small
</button>
`;

exports[`<Button /> should render with variant outline & primary color 1`] = `
.emotion-0 {
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  padding: 0.75rem 1.25rem;
  font-size: 0.889rem;
  border-radius: 0.25rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif;
  border: 1px solid #0070F3;
  background-color: #fff;
  color: #0070F3;
}

.emotion-0:hover {
  border: 1px solid #146DD6;
  background-color: #fff;
  color: #146DD6;
}

<button
  class="emotion-0"
>
  With Variant & color
</button>
`;

exports[`<Button /> should render with variant outline 1`] = `
.emotion-0 {
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  padding: 0.75rem 1.25rem;
  font-size: 0.889rem;
  border-radius: 0.25rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif;
  border: 1px solid #111;
  background-color: #fff;
  color: #111;
}

.emotion-0:hover {
  border: 1px solid #111;
  background-color: #fff;
  color: #111;
}

<button
  class="emotion-0"
>
  With variant
</button>
`;
